Add new materials

--- a/handouts/11-kant-transformation.org
+++ b/handouts/11-kant-transformation.org
@@ -357,7 +357,7 @@ were /itself/ inflected in the nature of one's animal faculties?
      faculty/capacity/?
   
 
-** Another Argument Against AR :noexport:
+** Another Argument Against TR :noexport:
 1. If TR is true, then in a rational being, a sensory capacity is either rational or
    depends for its individuation on some rational capacity.
 2. If a sensory capacity is rational, then it is both receptive and spontaneous
