--- a/phil971-kant-rational-agency.org
+++ b/phil971-kant-rational-agency.org
@@ -2494,8 +2494,8 @@ SCHEDULED: <2020-11-17 Tue>
 
 This week we'll wrap up our discussion of reason, rationality, and teleology by looking at some work by Karl Schafer on the unity of practical and theoretical reason, or more traditionally, in terms of the connection between the "principle of sufficient reason" and the moral law. 
 
-- Schafer, "[[/materials/readings/schafer-ch7.pdf][The Principles of Theoretical Reason and the Principle of Sufficient Reason]]"
-- Schafer, "[[/materials/readings/schafer-ch9.pdf][The Principles of Practical Reason]]"
+- Schafer, "The Principles of Theoretical Reason and the Principle of Sufficient Reason"
+- Schafer, "The Principles of Practical Reason"
 
 
 ** Course Notes
