--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-This is the source material for the grad seminar *PHIL 971* – Kant (and kantianism) on Rational Agency
+This is the source material for the grad seminar *PHIL 971* – Kant (and kantianism) on Rational Agency (Fall 2020)
 
 Kant famously considers moral agency to consist in acting from a grasp of rational principles as such. But what is a rational principle and what is it to act from such a principle? In this seminar we'll look at how Kant answers these questions, and evaluate the theory of rational agency that results. We'll also look at the reception of Kant's position in contemporary Anglophone philosophy, particularly in the work of Frankfurt, Korsgaard, Velleman, Reath, and Herman. Some related questions we'll be trying to find answers to include:
 
